# RAMP-mobility

./: aggregate_loads.py  csv_to_html.py  pyproject.toml
database/: d_min.csv  trips_by_time_saturday.csv  trips_by_time_sunday.csv  windows.csv
database/old_country_input_files/Europe/: AT.py  BE.py  BG.py  CH.py  CZ.py  DE.py  DK.py  EE.py  EL.py  ES.py  FI.py  FR.py  HR.py  HU.py  IE.py  IT.py  LT.py  LU.py  LV.py  NL.py  NO.py  PL.py  PT.py  RO.py  SE.py  SI.py  SK.py  UK.py
input/: pop_share.csv  t_func.csv  trips_by_time_weekday.csv
input_output/: common_input.yaml  d_tot.csv  vehicle_share.csv
input_output/industry/IND/: specific_input.yaml
ramp_mobility/: ramp_run.py
ramp_mobility/country_input_files/Europe/: CH.py  IND.py
ramp_mobility/post_process/: post_process.py
src/: __init__.py  config.py  define_country.py  input_class.py  ramp_run.py  ramp_run_old.py  test.py  user_appliances.py
src/checks/: check_user_appliances.py
src/core_model/: charging_process.py  initialise.py  input_class.py  stochastic_process_mobility.py  user_appliances.py
src/post_process/: post_process.py  post_process_b.py
src/utils/: parse_yaml.py  utils.py
