[tool.poetry]
name = "ramp-mobility"
version = "0.1.0"
description = ""
authors = ["Josien de Koning <josien.dekoning@sympheny.com>"]
readme = "README.md"
packages = [{include = "ramp_mobility"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
pandas = "^1.5.1"
convertdate = "^2.4.0"
holidays = "^0.16"
plotly = "^5.11.0"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
